tests/ui/parser/issues/issue-87217-keyword-order/const-async-const.stderr
error: expected one of `extern`, `fn`, or `unsafe`, found keyword `const`
  --> $DIR/const-async-const.rs:5:13
   |
LL | const async const fn test() {}
   |             ^^^^^
   |             |
   |             expected one of `extern`, `fn`, or `unsafe`
   |             help: `const` already used earlier, remove this one
   |
note: `const` first seen here
  --> $DIR/const-async-const.rs:5:1
   |
LL | const async const fn test() {}
   | ^^^^^

error: aborting due to previous error

